# PiranhaSwarm-

./: CLAUDE.md  Makefile  README.md  README_PIRANHA.md
config/: default.json  dns-trap.yaml  http-bait.yaml
core/: Cargo.toml
core/src/: config.rs  error.rs  lib.rs  main.rs  utils.rs
core/src/network/: analysis.rs  dns.rs  fingerprint.rs  geo.rs  mod.rs  packet_capture.rs
services/: go.mod
services/cmd/dns-trap/: main.go
services/cmd/http-bait/: main.go
