[package]
name = "piranha-swarm-core"
version = "0.1.0"
edition = "2021"
authors = ["itsbryanman <dev@piranhaswarm.com>"]
description = "Core entrapment daemon and deanonymization engine for Piranha Swarm"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
pnet = "0.34"
pnet_datalink = "0.34"
pnet_packet = "0.34"
trust-dns-resolver = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
maxminddb = "0.24"
ring = "0.17"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
ssh2 = "0.9"
async-ssh2-tokio = "0.8"
mdns = "3.0"
hex = "0.4"
rand = "0.8"
crossbeam-channel = "0.5"

[dev-dependencies]
tokio-test = "0.4"